docroot/fsfw.css
/* ... */
#sitelogo img {
    width: 150px;
    border-radius: 5px;
    box-shadow: 0 0 5px #CCC;
    position: absolute;
    top: 110px;
    left: 1rem;
    background: white;
}
#sitelogo:active img,
#sitelogo:focus img,
#sitelogo:hover img {
    box-shadow: 0 0 8px #CCC;
    background: #FAFAFA;
}

/********** navigation bar **********/

nav {
    display: block;
    background: white;
    box-shadow: 0 0 3px #CCC; /* NOTE: does not work for the top edge because of z-index; see #banner above for fix */
    width: 100%;
    z-index: 1;
    position: relative; /* fallback for clients without position:sticky support */
    position: sticky;   /* only supported in Firefox ATM, see http://caniuse.com/#feat=css-sticky */
    top: 0;
}

#navigation-area {
    display: block;
    max-width: 960px;
    margin: 0 auto;
    padding: 0 0.5rem 0 1rem;
    box-sizing: border-box;
    line-height: 3rem;
    position: relative; /* for correct placement of #sticky-sitelogo */
}

#sticky-sitelogo {
    position: absolute;
    left: 1rem;
    top: -0.2rem;
}
#sticky-sitelogo img {
    width: 150px;
    vertical-align: middle;
}

/* NOTE: Don't confuse the class .navigation with the ID #navigation. The class
 * also applies to #mobile-navigation. */
ul.navigation {
    list-style: none;
    display: inline;
    margin: 0;
    padding: 0;
}

ul#navigation {
    margin-left: calc(150px + 1rem);
}

ul#mobile-navigation {
    display: none;
}

ul.navigation > li {
    display: inline;
    margin: 0;
    padding: 0;
}

ul.navigation > li > a {
    display: inline-block;
    color: inherit !important;
    text-decoration: none !important;
    line-height: 1rem;
    padding: 0.5rem;
    border-radius: 3px;
    font-weight: bold;
}

/* .nav-icon applies to icons both in #share-navigation and #mobile-navigation
 * (which are both .navigation) */
ul.navigation > li.nav-icon > a {
    width: 2rem;
    text-align: center;
}

ul#share-navigation {
    float: right;
    position: relative;
    top: 2px;
}

ul.navigation > li > a > i.fa {
    font-size: 1.8rem;
}

ul.navigation > li.turquoise > a:hover,
ul.navigation > li.turquoise > a:active,
ul.navigation > li.turquoise > a:focus {
    background: #28ADB8;
    color: white !important;
}

ul.navigation > li.violet > a:hover,
ul.navigation > li.violet > a:active,
ul.navigation > li.violet > a:focus {
    background: #654BC7;
    color: white !important;
}

ul.navigation > li.green > a:hover,
ul.navigation > li.green > a:active,
ul.navigation > li.green > a:focus {
    background: #6BBB00;
    color: white !important;
}

ul.navigation > li.twitter-blue > a:hover,
ul.navigation > li.twitter-blue > a:active,
ul.navigation > li.twitter-blue > a:focus {
    background: #55ACEE;
    color: white !important;
}

ul.navigation > li.facebook-blue > a:hover,
ul.navigation > li.facebook-blue > a:active,
ul.navigation > li.facebook-blue > a:focus {
    background: #3B5998;
    color: white !important;
}

ul.navigation > li.diaspora-grey > a:hover,
ul.navigation > li.diaspora-grey > a:active,
ul.navigation > li.diaspora-grey > a:focus {
    background: #eee;
    color: white !important;
}

ul.navigation > li.github-black > a:hover,
ul.navigation > li.github-black > a:active,
ul.navigation > li.github-black > a:focus {
    background: #333333;
    color: white !important;
}

/* facebook note banner */

a#facebook-note {
    display: block;
    position: absolute;
    top: calc(2.8rem - 3px);
    left: -32768px; /* hidden unless shown, but in a way that does not break [Tab] navigation */
    width: 100%; /*relative to ul#share-navigation */
    box-sizing: border-box;
    border: 5px solid #3B5998;
    padding: 0.5rem;
    background: white;
    color: black;
}

li:hover a#facebook-note, a:focus + a#facebook-note {
    left: 0;
}

a#facebook-note:focus, a#facebook-note:hover, a#facebook-note:active {
    left: 0;
    background: #3B5998;
    color: white;
}

/********** condensed header layout for mobile **********/

/* This reverts some rules below, which apply to the content area, through !important. */

@media (max-width: 750px) {
    #sitelogo img {
        top: -10px;
    }
    #sticky-sitelogo {
        display: none;
    }

    #navigation-area {
        padding: 0 0.5rem;
    }
    ul#navigation {
        margin-left: 0;
    }

    h1 {
        margin-left: 1rem !important;
    }
}

/* On narrow screens, we break the navigation icons out of the navigation bar,
 * into a separate floating container. */

@media (max-width: 550px) {
    ul#share-navigation {
        display: none;
    }

    ul#mobile-navigation {
        display: block;
        position: absolute;
        top: -0.5rem;
        right: 1rem;
        box-shadow: 0 0 5px #CCC;
        border-radius: 5px;
        border: 1px solid #DDD;
        padding: 0.75rem 0 0.25rem 0;
        max-width: 6rem; /* two icons per 3rem */
        background: white;
    }

    #navigation-area {
        padding: 0;
        text-align: center;
    }
}

/********** content area **********/

#content-container {
    display: block;
    margin: 0 auto;
    max-width: 960px;
    box-sizing: border-box;
    background: white;
    box-shadow: 0 0 3px #CCC;
    padding: 0;
}

#content-container > section > * {
    margin: 1rem;
}
#content-container > section:not(.notopmargin):first-child > *:first-child {
    /* this placement is a bit more complicated because it needs to take the
     * overflowing sitelogo into account */
    margin-top: calc(100px - 3rem);
}

h1 {
    text-align: left;
    font-size: 200%;
}

#content-container > section:not(.notopmargin):first-child > h1:first-child {
    /* when the content starts with a <h1>, move it next to the overflowing sitelogo */
    padding-top: 0.5rem;
    margin-top: 0;
    margin-left: calc(150px + 2rem);
}

dl dd {
    margin-left: 2rem;
}

.hidden {
    display: none;
}

.important {
    font-size: 120%;
}

a:link {
    color: #28ADB8;
    text-decoration: none;
}
/* ... */

